[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/UI.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/cross_hair.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/health_bar.png" type="Texture" id=3]

[node name="UI" type="Control" groups=[
"UI",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.37842
margin_right = 2.37842
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoLabel" type="Label" parent="HBoxContainer"]
margin_left = 4.0
margin_top = 8.0
margin_right = 25.0
margin_bottom = 22.0
text = "0/0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="HBoxContainer2"]
margin_right = 300.0
margin_bottom = 40.0
value = 100.0
texture_progress = ExtResource( 3 )

[node name="InteractLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "Press E to interact"
align = 1
valign = 1

[node name="CrossHair" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = 36.0
texture = ExtResource( 2 )
